--- a/TextEditor/TextEditor.csproj
+++ b/TextEditor/TextEditor.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DocumentManager.cs" />
     <Compile Include="TextEditorMenu.xaml.cs">
       <DependentUpon>TextEditorMenu.xaml</DependentUpon>
     </Compile>
